2007-10-26  Philip Van Hoof  <pvanhoof@gnome.org>

	* X-Priority flag writing fixed

2007-10-25  Philip Van Hoof  <pvanhoof@gnome.org>

	* Corrections for the priority flags
	* Memory leak fix in CamelImapCommand, found by Dirk-Jan
	* Freeing of recursive locks, especially the ones that we allocated
	ourselves

	* This was a major API change

2007-10-24  Philip Van Hoof  <pvanhoof@gnome.org>

	* Improvements for the IDLE support. The Nonblocking read is now
	actually used correctly, various racy situations should be fixed now
	and instant event throwing is put in place (during IDLE state).
	* Removed the (*read_idle) funcptr from CamelTcpStream, as this is no longer
	required. This to reduce the complexity of the IDLE patch so that we
	can later, perhaps, more easily bring this feature to upstream Camel.
	* Updating unread and total count if necessary (due to IDLE events)
	* Fixed the normal-priority flag ni Maildir

2007-10-23  Philip Van Hoof  <pvanhoof@gnome.org>

	* Reference count problem in TnyCamelHeader
	* priv->folder_name in TnyCamelFolder sometimes is NULL, which
	doesn't seem right (and is racy).

2007-10-19  Philip Van Hoof  <pvanhoof@gnome.org>

	* Avoiding the second capability request, eliminating roundtrips when
	connecting. If LOGIN returns a capability response, we assume this one
	is complete enough to continue. The AUTH= ones are not relevant
	anymore as we've authenticated anyway (most IMAP servers don't include
	the AUTH= capabilities in the LOGIN's response).
	* Restarting IDLE when needed
	* Restoring the selected folder if possible after a reconnect
	* Reverted camel-operation.c to rev 2823 for my good friend Sergio
	* Locking issue, fix is experimental
	* A fix for normal CONDSTORE

2007-10-18  Philip Van Hoof  <pvanhoof@gnome.org>

	* Operation notifactions no longer wait for 4 seconds to group them
	together. This is experimental. Uncomment line 620 of
	camel-operation.c to undo this.